ajustes de estilos

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -410,9 +410,10 @@ input[type="submit"]:hover
     background rgba(224, 143, 23, 0.6)
     text-shadow 0 0 10px #000
 #content-contact
-  background #f9ece1
+  background-image url("../img/imagee.jpg")
   background-position center center
   background-size cover
+  background-repeat no-repeat
 #news
   .title
     color #555555
@@ -903,6 +904,7 @@ input[type="submit"]:hover
   padding 25px
   box-shadow 0 0 20px rgba(0, 0, 0, 0.10)
   border-radius 5px
+  margin-top 100px
 
 .form-control
   display block
