--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
 </div>
 <section class="section_padding">
     <div class="container">
-        <div class="col-md-9">
+        <div class="col-md-9 col-sm-9">
             <ul class="nav nav-pills">
                 <li class="active"><a data-toggle="pill" href="#home">Destinos</a></li>
                 <li><a data-toggle="pill" href="#menu1">Paquetes</a></li>
@@ -26,10 +26,11 @@
             <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
                     <div class="col-md-12 no-padding">
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
 
                                     <div class="description">
                                         <h3>Cancún</h3>
@@ -38,10 +39,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -49,10 +51,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -60,10 +63,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -71,10 +75,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -82,10 +87,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -97,10 +103,11 @@
                 </div>
                 <div id="menu1" class="tab-pane fade">
                     <div class="col-md-12 no-padding">
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -109,10 +116,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -121,10 +129,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -134,10 +143,11 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -146,10 +156,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -158,10 +169,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -174,10 +186,11 @@
                 </div>
                 <div id="menu2" class="tab-pane fade">
                     <div class="col-md-12 no-padding">
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -186,10 +199,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -198,10 +212,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -211,10 +226,11 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -223,10 +239,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -235,10 +252,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-4 no-padding">
+                        <div class="col-md-4 col-sm-4 no-padding">
                             <div class="box-default">
                                 <a href="#">
-                                    <div class="box-header" style="background-image: url('../img/img-default.jpg')"></div>
+                                    <div class="box-header"
+                                         style="background-image: url('../img/img-default.jpg')"></div>
                                     <div class="description">
                                         <h3>Cancún</h3>
                                         <h5>Quintana Roo</h5>
@@ -252,27 +270,42 @@
             </div>
         </div>
         <!-- Sidebar -->
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-3">
             <div class="box-widget">
                 <div class="box-widget-header">
                     Contáctanos
                 </div>
                 <div class="box-widget-container">
-                    <h2>Sucursal Lorems impsum</h2>
+                    <h2>Agencia matriz</h2>
 
-                    <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300</a></h3>
+                    <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> (353)531 73 00</a></h3>
 
-                    <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
-
-                    <h2>Sucursal Lorem tolem</h2>
-
-                    <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300</a></h3>
+                    <h3><a href="tel:3531117379"><i class="fa fa-phone"></i> (353)531 82 00</a></h3>
 
                     <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
+
+                    <h3>
+                        <a href="https://www.google.com.mx/maps/place/Francisco+I.+Madero+318,+Santuario,+Centro+Dos,+59053+Sahuayo+de+Morelos,+Mich./@20.0634481,-102.7242179,17.35z/data=!4m5!3m4!1s0x842ee353cb621753:0x96fd76a500856667!8m2!3d20.0630961!4d-102.7220154">Dirección:
+                            Cll. Madero 318</a></h3>
+
+                    <h2>Sucursal centro</h2>
+
+                    <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> (353)532 67 21</a></h3>
+
+                    <h3><a href="https://www.google.com.mx/maps/place/Partido+Acci%C3%B3n+Nacional/@19.9904577,-102.7242814,17z/data=!3m1!4b1!4m5!3m4!1s0x842efc7302a2e6a9:0x62748f0aafa724ba!8m2!3d19.9904527!4d-102.7220927">Dirección: Cll. Tepeyac #75 local 1</a></h3>
 
                     <h2>Correo</h2>
 
-                    <h3><a href="mailto:info@viajescoral.com.mx"><i class="fa fa-envelope"></i> info@viajescoral.com</a>
+                    <h3><a href="mailto:viajes_coral@hotmail.com"><i class="fa fa-envelope"></i>
+                        viajes_coral@hotmail.com</a>
+                    </h3>
+
+                    <h3><a href="mailto:isa_viajes03@outlook.com"><i class="fa fa-envelope"></i>
+                        isa_viajes03@outlook.com</a>
+                    </h3>
+
+                    <h3><a href="mailto:isa_viajes03@outlook.com"><i class="fa fa-envelope"></i>
+                        isaviajescoral@hotmail.com</a>
                     </h3>
 
                     <h2>Síguenos en</h2>
@@ -296,7 +329,7 @@
                         <div class="form-group">
                             <textarea name="text" id="" cols="100%" rows="4" class="form-control"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-block btn-green-clear">Enviar mensaje</button>
+                        <button type="submit" class="btn btn-block btn-green-clear">Enviar</button>
                     </form>
                 </div>
             </div>
@@ -316,6 +349,7 @@
                 Cuenta con un personal amable, así como de sistemas computarizados
                 para reservar los servicios turísticos.
             </p>
+
             <h3>¿Quieres vacaciones? ¡Contáctanos!</h3>
         </div>
     </div>
@@ -323,9 +357,9 @@
 
 <section id="contact" class="section_padding">
     <div class="container">
-        <a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300  |</a>
-        <a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300  |</a>
-        <a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79  |</a>
+        <a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300 |</a>
+        <a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300 |</a>
+        <a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79 |</a>
         <a href="mailto:info@viajescoral.com.mx"><i class="fa fa-envelope"></i> info@viajescoral.com</a>
     </div>
 </section>
