--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -2,7 +2,7 @@
 <section id="content-area">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 title">
+            <div class="col-md-12 title-post">
                 <h2 class="title">{{ Post.categoryName }}</h2>
             </div>
         </div>
@@ -12,11 +12,12 @@
                     <div class="col-md-4" ng-repeat="entry in Post.list">
                         <div class="box-default">
                             <a ui-sref="post_detail({slug: entry.slug})">
-                                <div class="box-header" style="background-image: url('{{ entry.urlImages.medium }}"></div>
+                                <div class="box-header"
+                                     style="background-image: url('{{ entry.urlImages.medium }}"></div>
 
                                 <div class="description">
                                     <h3><a ui-sref="product_detail({slug: entry.slug})">{{ entry.title }} </a></h3>
-                                    <h5>{{ entry.excerpt }}</h5>
+                                    <h4>{{ entry.excerpt }}</h4>
                                 </div>
                             </a>
                         </div>
