New single layout

--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -413,6 +413,14 @@
   .company_address
     padding 10px 15px
 
+  .img-gallery-single
+    padding 0
+    clear both
+    width 300px
+    height 130px
+    background-size cover
+    background-position center center
+
 
 
 /* Wide Mobile Layout: 480px. */
