--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -20,8 +20,8 @@
                                     </div>
 
                                     <div class="box-container">
-                                        <h3>{{ entry.title }}</h3>
-                                        <p>{{ entry.excerpt }}</p>
+                                        <h3>{{ entry.title | characters:35 }}</h3>
+                                        <p>{{ entry.excerpt | characters:50 }}</p>
                                     </div>
                                     <div class="box-footer">
                                         <p><span><i class="fa fa-calendar-"></i></span>
