--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -66,7 +66,8 @@ body
   margin-top 0px
 .content-post
   margin 80px 0
-
+  p
+    color #555
 .a-card
   margin 10px
 .deckgrid[deckgrid]::before
@@ -702,19 +703,19 @@ input[type="submit"]:hover
       padding-right 10px
       font-weight bold
       color #999
+#breadcrumb
+  background #f5f5f5
+  .breadcrumb
+    padding 15px 15px
+    list-style none
+    background-color transparent
+    border-radius 0
+    border-top 1px solid transparent
+    border-bottom 1px solid transparent
+    margin-bottom 0px
 
-.breadcrumb
-  padding 8px 15px
-  margin-bottom 20px
-  list-style none
-  background-color transparent
-  border-radius 0
-  border-top 1px solid #ccc
-  border-bottom 1px solid #ccc
-  margin-bottom 60px
-
-  li>a
-    color #cccccc
+    li>a
+      color #cccccc
 .img-size
   a>img
     width 100%
