--- a/app/css/main.css
+++ b/app/css/main.css
@@ -65,6 +65,9 @@ body {
 .content-post {
   margin: 80px 0;
 }
+.content-post p {
+  color: #555;
+}
 .a-card {
   margin: 10px;
 }
@@ -809,17 +812,19 @@ color
   font-weight: bold;
   color: #999;
 }
-.breadcrumb {
-  padding: 8px 15px;
-  margin-bottom: 20px;
+#breadcrumb {
+  background: #f5f5f5;
+}
+#breadcrumb .breadcrumb {
+  padding: 15px 15px;
   list-style: none;
   background-color: transparent;
   border-radius: 0;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 60px;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  margin-bottom: 0px;
 }
-.breadcrumb li>a {
+#breadcrumb .breadcrumb li>a {
   color: #ccc;
 }
 .img-size a>img {
