--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -1,4 +1,13 @@
 <section class="main-bg-pages" style="background-image: url('../img/imagee.jpg')"></section>
+<div id="breadcrumb">
+    <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-angle-left"></i> Regresar a inicio</a></li>
+            <li><a href="#">Excursiones</a></li>
+            <li class="active">Entry detail</li>
+        </ol>
+    </div>
+</div>
 <section id="content-area">
     <div class="container">
         <div class="row">
