Remove close div in sidebar

--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -13,15 +13,15 @@
 
         <h3>
             <a href="https://www.google.com.mx/maps/place/Francisco+I.+Madero+318,+Santuario,+Centro+Dos,+59053+Sahuayo+de+Morelos,+Mich./@20.0634481,-102.7242179,17.35z/data=!4m5!3m4!1s0x842ee353cb621753:0x96fd76a500856667!8m2!3d20.0630961!4d-102.7220154">Dirección:
-                Cll. Madero 318</a></h3>
+                Madero 318, Sahuayo, Mich.</a></h3>
 
         <h2>Sucursal centro</h2>
 
-        <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> (353)532 67 21</a></h3>
+        <h3><a target="_blank" href="tel:013535317300"><i class="fa fa-phone"></i> (353)532 67 21</a></h3>
 
         <h3>
-            <a href="https://www.google.com.mx/maps/place/Partido+Acci%C3%B3n+Nacional/@19.9904577,-102.7242814,17z/data=!3m1!4b1!4m5!3m4!1s0x842efc7302a2e6a9:0x62748f0aafa724ba!8m2!3d19.9904527!4d-102.7220927">Dirección:
-                Cll. Tepeyac #75 local 1</a></h3>
+            <a target="_blank" href="https://www.google.com.mx/maps/place/Partido+Acci%C3%B3n+Nacional/@19.9904577,-102.7242814,17z/data=!3m1!4b1!4m5!3m4!1s0x842efc7302a2e6a9:0x62748f0aafa724ba!8m2!3d19.9904527!4d-102.7220927">Dirección:
+                Tepeyac #75 local 1, Sahuayo, Mich.</a></h3>
 
         <h2>Correo</h2>
 
@@ -39,7 +39,7 @@
 
         <h2>Síguenos en</h2>
 
-        <h3><a href="https://www.facebook.com/viajes.coral.3/"><i class="fa fa-facebook-square"></i>
+        <h3><a target="_blank" href="https://www.facebook.com/viajes.coral.3/"><i class="fa fa-facebook-square"></i>
             @viajes.coral.3</a></h3>
     </div>
 </div>
@@ -61,5 +61,4 @@
             <button type="submit" class="btn btn-block btn-green-clear">Enviar</button>
         </form>
     </div>
-</div>
 </div>
