--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -66,6 +66,9 @@ body
   margin-top 0px
 .content-post
   margin 80px 0
+  article
+    h3
+      color #bf9e4f
   p
     color #555
 .a-card
@@ -973,13 +976,13 @@ input[type="submit"]:hover
         opacity 0
 
 .margin10
-  margin-bottom 10px
-  margin-right 10px
+  margin-bottom 15px
+  margin-right 20px
 
 .img-gallery-single
   padding 0
   clear both
-  width 600px
-  height 330px
+  width 560px
+  height 340px
   background-size cover
   background-position center center
