--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -65,6 +65,10 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  .box-widget
+    border-left 0 solid transparent
+    border-top 1px solid #ccc
+    padding 0
   .fluid-res
     padding 0
   #wrap
@@ -162,6 +166,8 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .main-bg-pages
+    display none
   .box-widget
     border-left 0 solid transparent
     border-top 1px solid #ccc
@@ -232,7 +238,7 @@
     .box-header
       clear both
   .content-post
-    margin 25px 0
+    margin 20px 0 80px  0
   .navbar-form
     padding 0 15px !important
   .navbar-default .navbar-collapse, .navbar-default .navbar-form
@@ -416,10 +422,8 @@
   h2
     font-size 22px
 
-
   .company_address p
     font-size 12px
-
 
   .company_address h2
     font-size 16px
@@ -428,15 +432,19 @@
   .company_address
     padding 10px 15px
 
+  .margin10
+    margin-bottom 20px
   .img-gallery-single
     padding 0
     clear both
-    width 300px
-    height 130px
+    width 100%
+    height 250px
     background-size cover
     background-position center center
 
-
+  .content-post
+    .pull-left
+      float none !important
 
 /* Wide Mobile Layout: 480px. */
 
