--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -8,7 +8,7 @@
         </ol>
     </div>
 </div>
-<section id="content-area">
+<section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
             <div class="col-md-9">
