--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -2,9 +2,9 @@
 <div id="breadcrumb">
     <div class="container">
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-angle-left"></i> Regresar a inicio</a></li>
-            <li><a href="#">Excursiones</a></li>
-            <li class="active">Entry detail</li>
+            <li><a ui-sref="home"><i class="fa fa-angle-left"></i> Regresar a inicio</a></li>
+            <li><a ui-sref="category({slug: Post.detail.categories[0].slug })">{{ Post.detail.categories[0].name }}</a></li>
+            <li class="active">{{ Post.detail.title }}</li>
         </ol>
     </div>
 </div>
