Add contact info in contact page

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -738,7 +738,7 @@ input[type="submit"]:hover
       &:hover
         color #E08F17
   .text
-    color #ccc
+    color #E08F17
 
 /**************** Buttons ***************/
 
