--- a/app/css/main.css
+++ b/app/css/main.css
@@ -848,7 +848,7 @@ color
   color: #e08f17;
 }
 #footer_area .text {
-  color: #ccc;
+  color: #e08f17;
 }
 .btn-sm {
   padding: 5px 10px !important;
