--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -12,18 +12,22 @@
         <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
 
         <h3>
-            <a href="https://www.google.com.mx/maps/place/Francisco+I.+Madero+318,+Santuario,+Centro+Dos,+59053+Sahuayo+de+Morelos,+Mich./@20.0634481,-102.7242179,17.35z/data=!4m5!3m4!1s0x842ee353cb621753:0x96fd76a500856667!8m2!3d20.0630961!4d-102.7220154">Dirección:
+            <a target="_blank" href="https://www.google.com.mx/maps/place/Francisco+I.+Madero+318,+Santuario,+Centro+Dos,+59053+Sahuayo+de+Morelos,+Mich./@20.0634481,-102.7242179,17.35z/data=!4m5!3m4!1s0x842ee353cb621753:0x96fd76a500856667!8m2!3d20.0630961!4d-102.7220154">Dirección:
                 Madero 318, Sahuayo, Mich.</a></h3>
 
         <h2>Sucursal centro</h2>
 
-        <h3><a target="_blank" href="tel:013535317300"><i class="fa fa-phone"></i> (353)532 67 21</a></h3>
+        <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> (353)532 67 21</a></h3>
 
         <h3>
-            <a target="_blank" href="https://www.google.com.mx/maps/place/Partido+Acci%C3%B3n+Nacional/@19.9904577,-102.7242814,17z/data=!3m1!4b1!4m5!3m4!1s0x842efc7302a2e6a9:0x62748f0aafa724ba!8m2!3d19.9904527!4d-102.7220927">Dirección:
+            <a target="_blank" href="https://www.google.com.mx/maps/place/Viajes+Coral+Centro/@20.0580736,-102.7251509,17z/data=!3m1!4b1!4m5!3m4!1s0x842efcad325c1be3:0x1e3d000ad6c67ed!8m2!3d20.0580736!4d-102.7229569">Dirección:
                 Tepeyac #75 local 1, Sahuayo, Mich.</a></h3>
 
         <h2>Correo</h2>
+
+        <h3><a href="mailto:info@viajescoral.com"><i class="fa fa-envelope"></i>
+            info@viajescoral.com</a>
+        </h3>
 
         <h3><a href="mailto:viajes_coral@hotmail.com"><i class="fa fa-envelope"></i>
             viajes_coral@hotmail.com</a>
@@ -47,18 +51,19 @@
     <div class="box-widget-header">
         Envíanos un mensaje
     </div>
-    <div class="box-widget-container">
-        <form action="">
+    <div class="box-widget-container" ng-controller="ContactCtrl as Contact">
+        <form  ng-submit="Contact.createNotification('CONTACT_FORM')">
             <div class="form-group">
-                <input type="email" class="form-control" id="InputName" placeholder="Nombre">
+                <input type="text" class="form-control" id="InputName" placeholder="Nombre" required ng-model="Contact.notification.name">
             </div>
             <div class="form-group">
-                <input type="email" class="form-control" id="InputEmail1" placeholder="Correo">
+                <input type="email" class="form-control" id="InputEmail1" placeholder="Correo" required ng-model="Contact.notification.email">
             </div>
             <div class="form-group">
-                <textarea name="text" id="" cols="100%" rows="4" class="form-control"></textarea>
+                <textarea name="text" id="" cols="100%" rows="4" class="form-control" required
+                                          ng-model="Contact.notification.message"></textarea>
             </div>
-            <button type="submit" class="btn btn-block btn-green-clear">Enviar</button>
+            <button type="submit" class="btn btn-block btn-green-clear" ng-disabled="Contact.busy">Enviar<span ng-if="Contact.busy"><i class="fa fa-spinner fa-spin"></i></span></button>
         </form>
     </div>
 </div>
