--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -48,7 +48,7 @@
                 <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
             </div>
             <!-- Viajes coral te recomienda -->
-            <div class="col-md-12">
+            <div class="col-md-12" ng-if="Post.blog.length">
                 <div class="col-md-12 title">
                     <h2 class="title-single">Viajes Coral te recomienda</h2>
                     <hr class="divider"/>
