--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -16,7 +16,7 @@
                             <a post-link="{ link: {url: entry.link, target: '_blank'} }"
                                ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
                                 <div class="box-default">
-                                    <div class="box-header" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : 'http://localhost:8080/img/img-default.jpg' }}')">
+                                    <div class="box-header" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : 'http://www.viajescoral.com/img/img-default.jpg' }}')">
                                     </div>
 
                                     <div class="box-container">
@@ -34,7 +34,6 @@
                         <div class="col-sm-12" ng-show="Post.busy">
                             <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
                         </div>
-
                         <div class="col-sm-12" ng-show="!Post.busy">
                             <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con
                                 contenido disponible
