--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -10,16 +10,21 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <div class="col-md-4" ng-repeat="entry in Search.listSearch">
-                        <div class="box-default">
-                            <div class="box-header">
-                                <a ui-sref="project_detail({slug: entry.slug})"><img
-                                        post-image="{{ entry.urlImages.medium }}" alt="{{ entry.title }}"/></a>
+                    <div class="col-sm-4" ng-repeat="entry in Search.listSearch">
+
+                        <a post-link="{ link: {url: entry.link, target: '_blank'} }"
+                           ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
+                            <div class="box-default">
+                                <div class="box-header" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : 'http://localhost:8080/img/img-default.jpg' }}')"></div>
+
+                                <div class="box-container">
+                                    <h3>{{ entry.title | characters:35 }}</h3>
+
+                                    <p>{{ entry.excerpt | characters:50 }}</p>
+                                </div>
                             </div>
-                            <div class="box-container">
-                                <h1>{{ entry.title }}</h1>
-                            </div>
-                        </div>
+                        </a>
+
                     </div>
                     <div class="col-sm-12 caption-style" ng-show="!Search.busy && Search.loadPostError">
                         <h4 class="text-center text-danger">Error al cargar el contenido, presione
