Fix to height in titles in home, blog and categories

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -986,3 +986,19 @@ input[type="submit"]:hover
   height 340px
   background-size cover
   background-position center center
+
+.height-title
+  height 60px
+
+.height-summary
+  height 70px
+
+.height-summary-categories
+  height 40px
+  margin-top 10px
+
+.height-title-home
+  height 90px
+
+.height-summary-home
+  height 50px
