--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -16,8 +16,8 @@
                                      style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : 'http://www.viajescoral.com/img/img-default.jpg' }}"></div>
 
                                 <div class="description">
-                                    <h3><a ui-sref="post_detail({slug: entry.slug})">{{ entry.title | characters:35 }} </a></h3>
-                                    <h5>{{ entry.excerpt | characters:70 }}</h5>
+                                    <div class="height-title"><h3><a ui-sref="post_detail({slug: entry.slug})">{{ entry.title | characters:50 }} </a></h3></div>
+                                    <div class="height-summary-categories"><h5>{{ entry.excerpt | characters:90 }}</h5></div>
                                 </div>
                             </a>
                         </div>
